Improve the implementation

--- a/data/scripts/Sanger Cell Line Project.ipynb
+++ b/data/scripts/Sanger Cell Line Project.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-01-14 17:42:52.788 I [root] Logger works!\n"
+      "16-01-15 01:06:11.975 I [root] Logger works!\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-01-14 17:42:52.793 I [root] Required paths exist: True\n"
+      "16-01-15 01:06:11.980 I [root] Required paths exist: True\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "# Using 800 samples take up 1.1GB SQLite database, which is too large\n",
-    "sample_info_df = sample_info_df.head(n=100)"
+    "# sample_info_df = sample_info_df.head(n=100)"
    ]
   },
   {
@@ -475,16 +475,16 @@
        "      <th>5500024032848101507998.E02</th>\n",
        "      <th>5500024052861011409506.E01</th>\n",
        "      <th>...</th>\n",
-       "      <th>5500024052861011409506.F08</th>\n",
-       "      <th>5500024032848101507000.H02</th>\n",
-       "      <th>5500024032848101507000.A03</th>\n",
-       "      <th>5500024032848101507000.B03</th>\n",
-       "      <th>5500024034290101707049.B03</th>\n",
-       "      <th>5500024032848101507998.D05</th>\n",
-       "      <th>5500024034290101707049.C03</th>\n",
-       "      <th>5500024034290101707049.D03</th>\n",
-       "      <th>5500024034290101707049.E03</th>\n",
-       "      <th>5500024035100021608461.E02</th>\n",
+       "      <th>5500024032848101507998.G01</th>\n",
+       "      <th>5500024031722092907496.C11</th>\n",
+       "      <th>5500024052861011409506.E11</th>\n",
+       "      <th>5500024035100021608461.E01</th>\n",
+       "      <th>5500024032848101507998.H01</th>\n",
+       "      <th>5500024052861011409506.E09</th>\n",
+       "      <th>5500024031722092907496.B11</th>\n",
+       "      <th>5500024052861011409506.D09</th>\n",
+       "      <th>5500024032848101507000.H03</th>\n",
+       "      <th>5500024035100021608461.F01</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -501,16 +501,16 @@
        "      <td>127</td>\n",
        "      <td>129</td>\n",
        "      <td>...</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>368</td>\n",
-       "      <td>3064</td>\n",
-       "      <td>976</td>\n",
-       "      <td>2386</td>\n",
-       "      <td>1777</td>\n",
-       "      <td>2104</td>\n",
-       "      <td>1120</td>\n",
-       "      <td>1042</td>\n",
-       "      <td>1094</td>\n",
+       "      <td>453</td>\n",
+       "      <td>572</td>\n",
+       "      <td>577</td>\n",
+       "      <td>890</td>\n",
+       "      <td>93</td>\n",
+       "      <td>102</td>\n",
+       "      <td>1547</td>\n",
+       "      <td>584</td>\n",
+       "      <td>367</td>\n",
+       "      <td>1707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1053_at</th>\n",
@@ -525,16 +525,16 @@
        "      <td>107</td>\n",
        "      <td>311</td>\n",
        "      <td>...</td>\n",
-       "      <td>222</td>\n",
-       "      <td>145</td>\n",
-       "      <td>50</td>\n",
-       "      <td>134</td>\n",
-       "      <td>151</td>\n",
-       "      <td>124</td>\n",
-       "      <td>115</td>\n",
-       "      <td>65</td>\n",
-       "      <td>170</td>\n",
-       "      <td>372</td>\n",
+       "      <td>208</td>\n",
+       "      <td>311</td>\n",
+       "      <td>334</td>\n",
+       "      <td>217</td>\n",
+       "      <td>198</td>\n",
+       "      <td>219</td>\n",
+       "      <td>175</td>\n",
+       "      <td>167</td>\n",
+       "      <td>181</td>\n",
+       "      <td>168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117_at</th>\n",
@@ -550,14 +550,14 @@
        "      <td>35</td>\n",
        "      <td>...</td>\n",
        "      <td>24</td>\n",
-       "      <td>39</td>\n",
-       "      <td>23</td>\n",
-       "      <td>28</td>\n",
-       "      <td>26</td>\n",
-       "      <td>29</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>2543</td>\n",
+       "      <td>32</td>\n",
+       "      <td>42</td>\n",
+       "      <td>44</td>\n",
+       "      <td>21</td>\n",
+       "      <td>33</td>\n",
        "      <td>22</td>\n",
-       "      <td>24</td>\n",
-       "      <td>23</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -573,16 +573,16 @@
        "      <td>2011</td>\n",
        "      <td>927</td>\n",
        "      <td>...</td>\n",
-       "      <td>75</td>\n",
-       "      <td>67</td>\n",
-       "      <td>189</td>\n",
-       "      <td>52</td>\n",
-       "      <td>65</td>\n",
-       "      <td>807</td>\n",
-       "      <td>2464</td>\n",
-       "      <td>137</td>\n",
+       "      <td>1807</td>\n",
+       "      <td>60</td>\n",
+       "      <td>64</td>\n",
+       "      <td>71</td>\n",
+       "      <td>54</td>\n",
+       "      <td>69</td>\n",
+       "      <td>51</td>\n",
+       "      <td>103</td>\n",
+       "      <td>63</td>\n",
        "      <td>76</td>\n",
-       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1255_g_at</th>\n",
@@ -597,20 +597,20 @@
        "      <td>15</td>\n",
        "      <td>16</td>\n",
        "      <td>...</td>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>17</td>\n",
-       "      <td>15</td>\n",
        "      <td>16</td>\n",
-       "      <td>15</td>\n",
+       "      <td>294</td>\n",
+       "      <td>138</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
        "      <td>16</td>\n",
        "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 100 columns</p>\n",
+       "<p>5 rows × 798 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -649,49 +649,49 @@
        "121_at                           2011                         927   \n",
        "1255_g_at                          15                          16   \n",
        "\n",
-       "                      ...              5500024052861011409506.F08  \\\n",
-       "1007_s_at             ...                                    1982   \n",
-       "1053_at               ...                                     222   \n",
+       "                      ...              5500024032848101507998.G01  \\\n",
+       "1007_s_at             ...                                     453   \n",
+       "1053_at               ...                                     208   \n",
        "117_at                ...                                      24   \n",
-       "121_at                ...                                      75   \n",
-       "1255_g_at             ...                                      17   \n",
+       "121_at                ...                                    1807   \n",
+       "1255_g_at             ...                                      16   \n",
        "\n",
-       "           5500024032848101507000.H02  5500024032848101507000.A03  \\\n",
-       "1007_s_at                         368                        3064   \n",
-       "1053_at                           145                          50   \n",
-       "117_at                             39                          23   \n",
-       "121_at                             67                         189   \n",
-       "1255_g_at                          17                          15   \n",
+       "           5500024031722092907496.C11  5500024052861011409506.E11  \\\n",
+       "1007_s_at                         572                         577   \n",
+       "1053_at                           311                         334   \n",
+       "117_at                           3159                        2543   \n",
+       "121_at                             60                          64   \n",
+       "1255_g_at                         294                         138   \n",
        "\n",
-       "           5500024032848101507000.B03  5500024034290101707049.B03  \\\n",
-       "1007_s_at                         976                        2386   \n",
-       "1053_at                           134                         151   \n",
-       "117_at                             28                          26   \n",
-       "121_at                             52                          65   \n",
-       "1255_g_at                          15                          17   \n",
+       "           5500024035100021608461.E01  5500024032848101507998.H01  \\\n",
+       "1007_s_at                         890                          93   \n",
+       "1053_at                           217                         198   \n",
+       "117_at                             32                          42   \n",
+       "121_at                             71                          54   \n",
+       "1255_g_at                          16                          17   \n",
        "\n",
-       "           5500024032848101507998.D05  5500024034290101707049.C03  \\\n",
-       "1007_s_at                        1777                        2104   \n",
-       "1053_at                           124                         115   \n",
-       "117_at                             29                          22   \n",
-       "121_at                            807                        2464   \n",
-       "1255_g_at                          15                          16   \n",
+       "           5500024052861011409506.E09  5500024031722092907496.B11  \\\n",
+       "1007_s_at                         102                        1547   \n",
+       "1053_at                           219                         175   \n",
+       "117_at                             44                          21   \n",
+       "121_at                             69                          51   \n",
+       "1255_g_at                          16                          16   \n",
        "\n",
-       "           5500024034290101707049.D03  5500024034290101707049.E03  \\\n",
-       "1007_s_at                        1120                        1042   \n",
-       "1053_at                            65                         170   \n",
-       "117_at                             24                          23   \n",
-       "121_at                            137                          76   \n",
-       "1255_g_at                          15                          16   \n",
+       "           5500024052861011409506.D09  5500024032848101507000.H03  \\\n",
+       "1007_s_at                         584                         367   \n",
+       "1053_at                           167                         181   \n",
+       "117_at                             33                          22   \n",
+       "121_at                            103                          63   \n",
+       "1255_g_at                          17                          14   \n",
        "\n",
-       "           5500024035100021608461.E02  \n",
-       "1007_s_at                        1094  \n",
-       "1053_at                           372  \n",
+       "           5500024035100021608461.F01  \n",
+       "1007_s_at                        1707  \n",
+       "1053_at                           168  \n",
        "117_at                             20  \n",
-       "121_at                             77  \n",
-       "1255_g_at                          16  \n",
+       "121_at                             76  \n",
+       "1255_g_at                          17  \n",
        "\n",
-       "[5 rows x 100 columns]"
+       "[5 rows x 798 columns]"
       ]
      },
      "execution_count": 20,
@@ -991,8 +991,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-01-14 09:42:56.222 I [root] Start populating probe info ...\n",
-      "16-01-14 09:42:57.421 I [root] Finished\n"
+      "16-01-14 17:06:16.550 I [root] Start populating probe info ...\n",
+      "16-01-14 17:06:17.794 I [root] Finished\n"
      ]
     }
    ],
@@ -1034,8 +1034,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16-01-14 09:42:57.439 I [root] Add gene info to probes ...\n",
-      "16-01-14 09:44:37.883 I [root] Finished\n"
+      "16-01-14 17:06:17.820 I [root] Add gene info to probes ...\n",
+      "16-01-14 17:09:30.365 I [root] Finished\n"
      ]
     }
    ],
@@ -1043,13 +1043,26 @@
     "logger.info('Add gene info to probes ...')\n",
     "for probe in probes:\n",
     "    gene_info = plat_info_df[plat_info_df['PROBEID'] == probe.identifier]\n",
-    "    for _, row in gene_info.iterrows():\n",
-    "        gene = Gene.objects.create(\n",
-    "            entrez_id=(row.ENTREZID if row.ENTREZID > 0 else None),\n",
-    "            gene_symbol=row.SYMBOL,\n",
-    "            gene_name=row.GENENAME,\n",
-    "        )\n",
-    "        probe.genes.add(gene)\n",
+    "    for row_id, row in gene_info.iterrows():\n",
+    "        # get Gene obj first \n",
+    "        try:\n",
+    "            gene = Gene.objects.get(\n",
+    "                entrez_id=row.ENTREZID,\n",
+    "            )\n",
+    "            if gene.symbol != row.SYMBOL or gene.name != row.GENENAME:\n",
+    "                logger.error(\n",
+    "                    'Row %d except gene[Entrez ID: %d] '\n",
+    "                    'with symbol %s but get %s in the row'\n",
+    "                    % (row_id, gene.entrez_id, gene.symbol, row.SYMBOL)\n",
+    "                )\n",
+    "        except Gene.DoesNotExist:\n",
+    "            gene = Gene.objects.create(\n",
+    "                entrez_id=row.ENTREZID,\n",
+    "                symbol=row.SYMBOL,\n",
+    "                name=row.GENENAME,\n",
+    "            )\n",
+    "        finally:\n",
+    "            probe.genes.add(gene)\n",
     "logger.info('Finished')"
    ]
   },
@@ -1063,7 +1076,7 @@
     {
      "data": {
       "text/plain": [
-       "24549"
+       "13839"
       ]
      },
      "execution_count": 37,
@@ -1268,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -1279,7 +1292,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data_val = sample_raw_data_df.values\n",
+    "\n",
+    "# make sure they can by correctly converted to the new dtype\n",
+    "np.allclose(raw_data_val, raw_data_val.astype(np.float32), equal_nan=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -1287,17 +1325,8 @@
    "source": [
     "with (data_root / dset.data_path).open('wb') as f:\n",
     "    # sample_raw_data_df.values.tofile(f)\n",
-    "    np.save(f, sample_raw_data_df.values)"
+    "    np.save(f, sample_raw_data_df.values.astype(np.float32))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
